samples/_failures_safe/1761299462_5757ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48955027.c:155:1: error: expected identifier or ‘(’ at end of input
  155 | void
      | ^~~~
